--- a/HTML/connexion.html
+++ b/HTML/connexion.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width= device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="connexion.css">
+    <link rel="stylesheet" href="../css/connexion.css">
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
     <header>
         <div>
-                <img id="logo" src="logo/logo petit taille.png">
+                <img id="logo" src="/logo/logo petit taille.png">
             <nav>
                 <ul>
                     <a href="#"><li> Guide d'utilisation </li></a> 
@@ -27,7 +27,7 @@
         </section>
         <section>
             <div id="container_histoire">
-                <img src="images/father-son-front-wall.jpg">
+                <img src="/images/father-son-front-wall.jpg">
                 <div id="histoire">
                     <h1>Nous connaître découvrir notre histoire</h1>
                     <p>Octobre 2023, en tant que stagiaire en formation de Conceptrice  Développeuse d’Application Web chez Descodeuses à Roubaix, que nous avons imaginé l’application MédiRappel. Notre idée était de répondre à un des besoins dans le secteur de la santé et surtout pour les personnes vulnérables.
@@ -42,7 +42,7 @@
     <footer>
         <div id="div_footer">
             
-            <img id="footer_logo" src="logo/Logo bleu marine.png">
+            <img id="footer_logo" src="/logo/Logo bleu marine.png">
         
         <div id="Fonctionnalités">
             <h3><a href="#"></a> Guide d'utilisation</a> </h3> 
