--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div>
-                <img id="logo" src="logo/logo petit taille.png">
+                <img id="logo" src="/logo/logo petit taille.png">
             <nav>
                 <ul>
                     <a href="#"><li> Guide d'utilisation </li></a> 
@@ -28,7 +28,7 @@
         <section id="first_section">
             <div>
                 <div>
-                    <img src="images/father-son-fist-bumping-living-room.jpg">
+                    <img src= "/images/father-son-fist-bumping-living-room.jpg">
                 </div>
                 <div>
                     <h1>
@@ -70,8 +70,8 @@
                     </div>
                     <div class="flex">
                         <div id="img_container">
-                            <img class="traitement" src="images/2.png">
-                            <img class="traitement" src="images/1 (1).png">
+                            <img class="traitement" src="/images/2.png">
+                            <img class="traitement" src="/images/3.png">
                         </div>
                         <h2>Vous oubliez vos traitements</h2>
                         <p>Elle vous permet de garder un œil <br>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="flex">
                         <div id="div_violet">
-                            <img id="img_div" src="images/2010.i606.001..online medicine set-05 (1).jpg">
+                            <img id="img_div" src="/images/2010.i606.001..online medicine set-05 (1).jpg">
                         </div>
                         <h2>Vous oubliez vos traitements</h2>
                         <p>Les rappels aident de ne plus loupez <br> 
@@ -92,7 +92,7 @@
              </section>
              <section>
                 <div id="container_histoire">
-                    <img src="images/father-son-front-wall.jpg">
+                    <img src="/images/father-son-front-wall.jpg">
                     <div id="histoire">
                         <h1>Nous connaître découvrir notre histoire</h1>
                         <p>Octobre 2023, en tant que stagiaire en formation de Conceptrice  Développeuse d’Application Web chez Descodeuses à Roubaix, que nous avons imaginé l’application MédiRappel. Notre idée était de répondre à un des besoins dans le secteur de la santé et surtout pour les personnes vulnérables.
@@ -107,7 +107,7 @@
     <footer>
         <div id="div_footer">
             
-                <img id="footer_logo" src="logo/Logo bleu marine.png">
+                <img id="footer_logo" src="/logo/Logo bleu marine.png">
             
             <div id="Fonctionnalités">
                 <h3><a href="#"></a> Guide d'utilisation</a> </h3> 
