Ajout d'une image

--- a/HTML/connexion.html
+++ b/HTML/connexion.html
@@ -23,7 +23,15 @@
     </header>
     <main>
         <section>
-
+            <h1>titre</h1>
+            <p></p>
+            
+               
+            <div class="div1">
+                <label for="ck"></label>
+                <input type="text" name="ck" id="ck" placeholder="Email">
+            </div>
+            <img src="/images/51932 (1).jpg">
         </section>
         <section>
             <div id="container_histoire">
