--- a/HTML/rappelmed.html
+++ b/HTML/rappelmed.html
@@ -26,17 +26,17 @@
                     <div id="form">
                             <form action="#" method="post">
                             <button type="submit" class="custom-button">
-                            <label for="submitBtn">Ajouter un médicament <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M23.245 4l-11.245 14.374-11.219-14.374-.781.619 12 15.381 12-15.391-.755-.609z"/></svg></label>
+                            <label for="submitBtn">Ajouter un médicament <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z"/></svg></label>
                             <input type="submit" id="submitBtn" style="display: none;">
                             </button>
 
                             <button type="submit" class="custom-button">
-                            <label for="submitBtn">Fréquence <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M23.245 4l-11.245 14.374-11.219-14.374-.781.619 12 15.381 12-15.391-.755-.609z"/></svg></label>
+                            <label for="submitBtn">Fréquence <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z"/></svg></label>
                             <input type="submit" id="submitBtn" style="display: none;">
                           </button>
 
                           <button type="submit" class="custom-button">
-                            <label for="submitBtn">Posologie <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M23.245 4l-11.245 14.374-11.219-14.374-.781.619 12 15.381 12-15.391-.755-.609z"/></svg></label>
+                            <label for="submitBtn">Posologie <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z"/></svg></label>
                             <input type="submit" id="submitBtn" style="display: none;">
                           </button>
 
