fixation de footer

--- a/HTML/rappelmed.html
+++ b/HTML/rappelmed.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/rappelmed.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@500&family=Roboto:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -81,7 +85,7 @@
             
             <img id="footer_logo" src="/logo/Logo bleu marine.png">
         
-        <div id="Fonctionnalités">
+            <div id="Fonctionnalities">
             <h3><a href="#"></a> Guide d'utilisation</a> </h3> 
 
             <div>
@@ -93,14 +97,14 @@
              </div>
             <h3><a href="#"></a> Qui sommes-nous?</a> </h3> 
             <h3><a href="#"></a> Se connecter </a> </h3> 
+            </div>
+            </div>
+            <div id="droit">
+            <h5> <a href="#">Mentions Légales </a> </h5>
+            <h5><a href="#">CGU</a> </h5>  
+            <h5><a href="#">Politique de confidentialité</a> </h5>  
+            <h5><a  href="#"> Gestion des cookies</a> </h5> 
         </div>
-    </div>
-    <div id="droit">
-        <h5> <a href="#">Mentions Légales </a> </h5>
-        <h5><a href="#">CGU</a> </h5>  
-        <h5><a href="#">Politique de confidentialité</a> </h5>  
-        <h5><a  href="#"> Gestion des cookies</a> </h5> 
-    </div>
     </footer>
 </body>
 </html>
