creation de la pae inscription

--- a/HTML/connexion.html
+++ b/HTML/connexion.html
@@ -42,7 +42,7 @@
             </div>
          </div>
          <div>
-            <button type="button"><a href="#">Inscription</a></button>
+            <button type="button"><a href="Inscription.html">Inscription</a></button>
             
             <button type="button"><a href="#">Mot de passe oublié</a></button>
             
