creation de formulaire

--- a/HTML/Inscription.html
+++ b/HTML/Inscription.html
@@ -83,6 +83,19 @@
         </div>
 
         <button type="submit">Envoyer</button>
+        <section>
+            <div id="container_histoire">
+                <img src="/images/father-son-front-wall.jpg">
+                <div id="histoire">
+                    <h1>Nous connaître découvrir notre histoire</h1>
+                    <p>Octobre 2023, en tant que stagiaire en formation de Conceptrice  Développeuse d’Application Web chez Descodeuses à Roubaix, que nous avons imaginé l’application MédiRappel. Notre idée était de répondre à un des besoins dans le secteur de la santé et surtout pour les personnes vulnérables.
+
+                        Vu  les feedbacks positifs lors de la présentation de l’idée de notre projet, nous avons compris que notre idée répondait à un réel besoin et pouvait donner un surplus lau domaine  de soin.</p>
+                    <button> Découvrir </button>
+                </div>
+            </div>
+            
+         </section>
     </main>
     <footer>
         <div id="div_footer">
